--- a/vercel.json
+++ b/vercel.json
@@ -15,32 +15,6 @@
         {
           "source": "/scalding/(.*)",
           "destination": "https://github.com/stripe-archive/scalding/"
-        }
-    ],
-    "rewrites": [
-        {
-          "source": "/stripe-java/(.*)",
-          "destination": "https://stripe.github.io/stripe-java/$1"
-        },
-        {
-          "source": "/stripe-java",
-          "destination": "https://stripe.github.io/stripe-java/"
-        },
-        {
-          "source": "/stripe-ios",
-          "destination": "https://stripe.github.io/stripe-ios/"
-        },
-        {
-          "source": "/stripe-ios/(.*)",
-          "destination": "https://stripe.github.io/stripe-ios/$1"
-        },
-        {
-          "source": "/stripe-android/(.*)",
-          "destination": "https://stripe.github.io/stripe-android/$1"
-        },
-        {
-          "source": "/stripe-android",
-          "destination": "https://stripe.github.io/stripe-android/"
         },
         {
           "source": "/sequins",
@@ -49,58 +23,84 @@
         {
           "source": "/sequins/(.*)",
           "destination": "https://github.com/stripe-archive/sequins/"
+        }
+    ],
+    "rewrites": [
+        {
+          "source": "/stripe-java/(.*)",
+          "destination": "https://stripe-java.vercel.app/$1"
+        },
+        {
+          "source": "/stripe-java",
+          "destination": "https://stripe-java.vercel.app/"
+        },
+        {
+          "source": "/stripe-ios",
+          "destination": "https://stripe-ios.vercel.app/"
+        },
+        {
+          "source": "/stripe-ios/(.*)",
+          "destination": "https://stripe-ios.vercel.app/$1"
+        },
+        {
+          "source": "/stripe-android/(.*)",
+          "destination": "https://stripe-android-beta.vercel.app/$1"
+        },
+        {
+          "source": "/stripe-android",
+          "destination": "https://stripe-android-beta.vercel.app/"
         },
         {
           "source": "/elements-examples",
-          "destination": "https://stripe.github.io/elements-examples/"
+          "destination": "https://elements-examples.vercel.app/"
         },
         {
           "source": "/elements-examples/(.*)",
-          "destination": "https://stripe.github.io/elements-examples/$1"
+          "destination": "https://elements-examples.vercel.app/$1"
         },
         {
           "source": "/stripe-terminal-ios",
-          "destination": "https://stripe.github.io/stripe-terminal-ios/"
+          "destination": "https://stripe-terminal-ios.vercel.app/"
         },
         {
           "source": "/stripe-terminal-ios/(.*)",
-          "destination": "https://stripe.github.io/stripe-terminal-ios/$1"
+          "destination": "https://stripe-terminal-ios.vercel.app/$1"
         },
         {
           "source": "/stripe.github.io/(.*)",
-          "destination": "https://stripe.github.io/stripe.github.io/$1"
+          "destination": "https://stripe-github-io.vercel.app/$1"
         },
         {
           "source": "/stripe-terminal-android",
-          "destination": "https://stripe.github.io/stripe-terminal-android/"
+          "destination": "https://stripe-terminal-android.vercel.app/"
         },
         {
           "source": "/stripe-terminal-android/(.*)",
-          "destination": "https://stripe.github.io/stripe-terminal-android/$1"
+          "destination": "https://stripe-terminal-android.vercel.app/$1"
         },
         {
           "source": "/stripe-react-native",
-          "destination": "https://stripe.github.io/stripe-react-native/"
+          "destination": "https://stripe-react-native-fawn.vercel.app/"
         },
         {
           "source": "/stripe-react-native/(.*)",
-          "destination": "https://stripe.github.io/stripe-react-native/$1"
+          "destination": "https://stripe-react-native-fawn.vercel.app/$1"
         },
         {
           "source": "/stripe-terminal-react-native",
-          "destination": "https://stripe.github.io/stripe-terminal-react-native/"
+          "destination": "https://stripe-terminal-react-native.vercel.app/"
         },
         {
           "source": "/stripe-terminal-react-native/(.*)",
-          "destination": "https://stripe.github.io/stripe-terminal-react-native/$1"
+          "destination": "https://stripe-terminal-react-native.vercel.app/$1"
         },
         {
           "source": "/stripe-identity-react-native",
-          "destination": "https://stripe.github.io/stripe-identity-react-native/"
+          "destination": "https://stripe-identity-react-native.vercel.app/"
         },
         {
           "source": "/stripe-identity-react-native/(.*)",
-          "destination": "https://stripe.github.io/stripe-identity-react-native/$1"
+          "destination": "https://stripe-identity-react-native.vercel.app/$1"
         }
     ]
 }
