--- a/vercel.json
+++ b/vercel.json
@@ -21,6 +21,11 @@
           "destination": "https://github.com/stripe-archive/sequins/"
         },
         {
+          "source": "/stripe-java",
+          "destination": "/stripe-java/",
+          "permanent": true
+        },
+        {
           "source": "/sequins/(.*)",
           "destination": "https://github.com/stripe-archive/sequins/"
         }
@@ -29,10 +34,6 @@
         {
           "source": "/stripe-java/(.*)",
           "destination": "https://stripe-java.vercel.app/$1"
-        },
-        {
-          "source": "/stripe-java",
-          "destination": "https://stripe-java.vercel.app/"
         },
         {
           "source": "/stripe-ios",
