--- a/vercel.json
+++ b/vercel.json
@@ -29,16 +29,32 @@
           "destination": "https://github.com/stripe-archive/sequins/"
         },
         {
+          "source": "/stripe-android",
+          "destination": "/stripe-android/index.html"
+        },
+        {
           "source": "/stripe-react-native",
-          "destination": "https://stripe-react-native-fawn.vercel.app/api-reference/index.html"
+          "destination": "/stripe-react-native/api-reference/index.html"
         },
         {
           "source": "/stripe-identity-react-native",
-          "destination": "https://stripe-identity-react-native.vercel.app/api-reference/index.html"
+          "destination": "/stripe-identity-react-native/api-reference/index.html"
         },
         {
           "source": "/stripe-terminal-react-native",
-          "destination": "https://stripe-terminal-react-native.vercel.app/api-reference/index.html"
+          "destination": "/stripe-terminal-react-native/api-reference/index.html"
+        },
+        {
+          "source": "/stripe-terminal-ios",
+          "destination": "/stripe-terminal-ios/docs/index.html"
+        },
+        {
+          "source": "/stripe-terminal-android",
+          "destination": "/stripe-terminal-android/index.html"
+        },
+        {
+          "source": "/stripe.github.io",
+          "destination": "/"
         }
     ],
     "rewrites": [
@@ -59,10 +75,6 @@
           "destination": "https://stripe-android-beta.vercel.app/$1"
         },
         {
-          "source": "/stripe-android",
-          "destination": "https://stripe-android-beta.vercel.app/"
-        },
-        {
           "source": "/elements-examples",
           "destination": "https://elements-examples.vercel.app/"
         },
@@ -71,20 +83,12 @@
           "destination": "https://elements-examples.vercel.app/$1"
         },
         {
-          "source": "/stripe-terminal-ios",
-          "destination": "https://stripe-terminal-ios.vercel.app/"
-        },
-        {
           "source": "/stripe-terminal-ios/(.*)",
           "destination": "https://stripe-terminal-ios.vercel.app/$1"
         },
         {
           "source": "/stripe.github.io/(.*)",
           "destination": "https://stripe-github-io.vercel.app/$1"
-        },
-        {
-          "source": "/stripe-terminal-android",
-          "destination": "https://stripe-terminal-android.vercel.app/"
         },
         {
           "source": "/stripe-terminal-android/(.*)",
