--- a/vercel.json
+++ b/vercel.json
@@ -59,32 +59,16 @@
     ],
     "rewrites": [
         {
-          "source": "/test2",
-          "destination": "https://ask-utils.github.io/ask-utils/"
-        },
-        {
-          "source": "/test2/(.*)",
-          "destination": "https://ask-utils.github.io/ask-utils/$1"
-        },
-        {
-          "source": "/test",
-          "destination": "https://hideokamoto.github.io/elements-examples"
-        },
-        {
-          "source": "/test/(.*)",
-          "destination": "https://hideokamoto.github.io/elements-examples/$1"
-        },
-        {
           "source": "/stripe-java/(.*)",
           "destination": "https://stripe-java.vercel.app/$1"
         },
         {
           "source": "/stripe-ios",
-          "destination": "https://hideokamoto.github.io/stripe-ios/"
+          "destination": "https://stripe-ios.vercel.app/"
         },
         {
           "source": "/stripe-ios/(.*)",
-          "destination": "https://hideokamoto.github.io/stripe-ios/$1"
+          "destination": "https://stripe-ios.vercel.app/$1"
         },
         {
           "source": "/stripe-android/(.*)",
