--- a/vercel.json
+++ b/vercel.json
@@ -1,67 +1,71 @@
 {
-    "redirects": [
-        {
-          "source": "/stripe-java",
-          "destination": "/stripe-java/index.html"
-        },
-        {
-          "source": "/veneur",
-          "destination": "https://github.com/stripe/veneur/"
-        },
-        {
-          "source": "/veneur/(.*)",
-          "destination": "https://github.com/stripe/veneur/"
-        },
-        {
-          "source": "/scalding",
-          "destination": "https://github.com/stripe-archive/scalding/"
-        },
-        {
-          "source": "/scalding/(.*)",
-          "destination": "https://github.com/stripe-archive/scalding/"
-        },
-        {
-          "source": "/sequins",
-          "destination": "https://github.com/stripe-archive/sequins/"
-        },
-        {
-          "source": "/sequins/(.*)",
-          "destination": "https://github.com/stripe-archive/sequins/"
-        },
-        {
-          "source": "/stripe-android",
-          "destination": "/stripe-android/index.html"
-        },
-        {
-          "source": "/stripe-react-native",
-          "destination": "/stripe-react-native/api-reference/index.html"
-        },
-        {
-          "source": "/stripe-identity-react-native",
-          "destination": "/stripe-identity-react-native/api-reference/index.html"
-        },
-        {
-          "source": "/stripe-terminal-react-native",
-          "destination": "/stripe-terminal-react-native/api-reference/index.html"
-        },
-        {
-          "source": "/stripe-terminal-ios",
-          "destination": "/stripe-terminal-ios/docs/index.html"
-        },
-        {
-          "source": "/stripe-terminal-android",
-          "destination": "/stripe-terminal-android/index.html"
-        },
-        {
-          "source": "/stripe.github.io",
-          "destination": "/"
-        }
-    ],
-    "rewrites": [
-        {
-          "source": "/stripe-java/(.*)",
-          "destination": "https://stripe-java.vercel.app/$1"
-        },
+  "redirects": [
+      {
+        "source": "/stripe-java",
+        "destination": "/stripe-java/index.html"
+      },
+      {
+        "source": "/veneur",
+        "destination": "https://github.com/stripe/veneur/"
+      },
+      {
+        "source": "/veneur/(.*)",
+        "destination": "https://github.com/stripe/veneur/"
+      },
+      {
+        "source": "/scalding",
+        "destination": "https://github.com/stripe-archive/scalding/"
+      },
+      {
+        "source": "/scalding/(.*)",
+        "destination": "https://github.com/stripe-archive/scalding/"
+      },
+      {
+        "source": "/sequins",
+        "destination": "https://github.com/stripe-archive/sequins/"
+      },
+      {
+        "source": "/sequins/(.*)",
+        "destination": "https://github.com/stripe-archive/sequins/"
+      },
+      {
+        "source": "/stripe-android",
+        "destination": "/stripe-android/index.html"
+      },
+      {
+        "source": "/stripe-react-native",
+        "destination": "/stripe-react-native/api-reference/index.html"
+      },
+      {
+        "source": "/stripe-identity-react-native",
+        "destination": "/stripe-identity-react-native/api-reference/index.html"
+      },
+      {
+        "source": "/stripe-terminal-react-native",
+        "destination": "/stripe-terminal-react-native/api-reference/index.html"
+      },
+      {
+        "source": "/stripe-terminal-ios",
+        "destination": "/stripe-terminal-ios/docs/index.html"
+      },
+      {
+        "source": "/stripe-terminal-android",
+        "destination": "/stripe-terminal-android/index.html"
+      },
+      {
+        "source": "/stripe.github.io",
+        "destination": "/"
+      },
+      {
+        "source": "/stripe.github.io/(.*)",
+        "destination": "/"
+      }
+  ],
+  "rewrites": [
+      {
+        "source": "/stripe-java/(.*)",
+        "destination": "https://stripe-java-six.vercel.app/$1"
+      },
         {
           "source": "/stripe-ios",
           "destination": "https://hideokamoto.github.io/stripe-ios/documentation/stripe/"
@@ -70,41 +74,37 @@
           "source": "/stripe-ios/(.*)",
           "destination": "https://hideokamoto.github.io/stripe-ios/$1"
         },
-        {
-          "source": "/stripe-android/(.*)",
-          "destination": "https://stripe-android-beta.vercel.app/$1"
-        },
-        {
-          "source": "/elements-examples",
-          "destination": "https://elements-examples.vercel.app/"
-        },
-        {
-          "source": "/elements-examples/(.*)",
-          "destination": "https://elements-examples.vercel.app/$1"
-        },
-        {
-          "source": "/stripe-terminal-ios/(.*)",
-          "destination": "https://stripe-terminal-ios.vercel.app/$1"
-        },
-        {
-          "source": "/stripe.github.io/(.*)",
-          "destination": "https://stripe-github-io.vercel.app/$1"
-        },
-        {
-          "source": "/stripe-terminal-android/(.*)",
-          "destination": "https://stripe-terminal-android.vercel.app/$1"
-        },
-        {
-          "source": "/stripe-react-native/(.*)",
-          "destination": "https://stripe-react-native-fawn.vercel.app/$1"
-        },
-        {
-          "source": "/stripe-terminal-react-native/(.*)",
-          "destination": "https://stripe-terminal-react-native.vercel.app/$1"
-        },
-        {
-          "source": "/stripe-identity-react-native/(.*)",
-          "destination": "https://stripe-identity-react-native.vercel.app/$1"
-        }
-    ]
+      {
+        "source": "/stripe-android/(.*)",
+        "destination": "https://stripe-android-pink.vercel.app/$1"
+      },
+      {
+        "source": "/elements-examples",
+        "destination": "https://elements-examples.vercel.app/"
+      },
+      {
+        "source": "/elements-examples/(.*)",
+        "destination": "https://elements-examples.vercel.app/$1"
+      },
+      {
+        "source": "/stripe-terminal-ios/(.*)",
+        "destination": "https://stripe-terminal-ios-five.vercel.app/$1"
+      },
+      {
+        "source": "/stripe-terminal-android/(.*)",
+        "destination": "stripe-terminal-android-nine.vercel.app/$1"
+      },
+      {
+        "source": "/stripe-react-native/(.*)",
+        "destination": "https://stripe-react-native-kappa.vercel.app/$1"
+      },
+      {
+        "source": "/stripe-terminal-react-native/(.*)",
+        "destination": "https://stripe-terminal-react-native-one.vercel.app/$1"
+      },
+      {
+        "source": "/stripe-identity-react-native/(.*)",
+        "destination": "https://docs-stripe-identity-react-native.vercel.app/$1"
+      }
+  ]
 }
