--- a/vercel.json
+++ b/vercel.json
@@ -56,6 +56,10 @@
         "source": "/stripe.github.io",
         "destination": "/"
       },
+        {
+          "source": "/stripe-ios",
+          "destination": "https://stripe-ios.vercel.app/documentation/stripe/"
+        },
       {
         "source": "/stripe.github.io/(.*)",
         "destination": "/"
@@ -67,12 +71,8 @@
         "destination": "https://stripe-java-six.vercel.app/$1"
       },
         {
-          "source": "/stripe-ios",
-          "destination": "https://hideokamoto.github.io/stripe-ios/documentation/stripe/"
-        },
-        {
           "source": "/stripe-ios/(.*)",
-          "destination": "https://hideokamoto.github.io/stripe-ios/$1"
+          "destination": "hhttps://stripe-ios.vercel.app/$1"
         },
       {
         "source": "/stripe-android/(.*)",
