--- a/vercel.json
+++ b/vercel.json
@@ -66,14 +66,14 @@
         "source": "/stripe-java/(.*)",
         "destination": "https://stripe-java-six.vercel.app/$1"
       },
-        {
-          "source": "/stripe-ios",
-          "destination": "hhttps://stripe-ios.vercel.app/stripe-ios"
-        },
-        {
-          "source": "/stripe-ios/(.*)",
-          "destination": "hhttps://stripe-ios.vercel.app/stripe-ios/$1"
-        },
+      {
+        "source": "/stripe-ios",
+        "destination": "https://stripe-ios.vercel.app/"
+      },
+      {
+        "source": "/stripe-ios/(.*)",
+        "destination": "https://stripe-ios.vercel.app/$1"
+      },
       {
         "source": "/stripe-android/(.*)",
         "destination": "https://stripe-android-pink.vercel.app/$1"
